# plover_open_path

./: MANIFEST.in  Pipfile  README.md  README.rst  pyuic.json  setup.cfg  setup.py
open_path/: config.py  dialog.py
open_path/resources/: resources.qrc
