[metadata]
name = plover_open_path
version = 0.0.1
description = A tool plugin for Plover to open folders and files
long_description = file: README.rst
author = Nick Markopoulos
author_email = nsmarkop@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nsmarkop/plover_open_path
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev7
    PyQt5>=5.9.2
packages =
    open_path

[options.entry_points]
plover.gui.qt.tool =
    plover_open_config_folder = open_path.config:OpenConfigFolder
    plover_open_config_file = open_path.config:OpenConfigFile
